--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "flux": "^2.1.1",
         "gulp": "^3.9.0",
         "jest": "^0.1.40",
-        "jquery": "^2.1.4",
+        "jquery": "~3.0.0",
         "react": "^0.14.7",
         "react-addons-test-utils": "^0.14.7",
         "react-dom": "^0.14.7",
