--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "author": "",
     "license": "ISC",
     "jest": {
-        "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-        "testFileExtensions": [
-            "es6",
-            "js"
-        ],
+        "transform": {".*": "<rootDir>/node_modules/babel-jest"},
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
         "moduleFileExtensions": [
             "es6",
             "js",
@@ -26,35 +23,35 @@
         ]
     },
     "dependencies": {
-        "babel-preset-es2015": "^6.1.18",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.1.18",
-        "babel-preset-stage-0": "^6.3.13",
-        "browserify": "^12.0.1",
-        "ejs": "^2.3.4",
-        "express": "^4.13.3",
-        "flux": "^2.1.1",
-        "gulp": "^3.9.0",
-        "jest": "^0.1.40",
-        "jquery": "~3.0.0",
-        "react": "^0.14.7",
-        "react-addons-test-utils": "^0.14.7",
-        "react-dom": "^0.14.7",
-        "vinyl-source-stream": "^1.1.0"
+        "babel-preset-stage-0": "^6.24.1",
+        "browserify": "^15.2.0",
+        "ejs": "^2.5.7",
+        "express": "^4.16.2",
+        "flux": "^3.1.3",
+        "gulp": "^3.9.1",
+        "jest": "^22.1.4",
+        "jquery": "^3.3.1",
+        "react": "^16.2.0",
+        "react-addons-test-utils": "^15.6.2",
+        "react-dom": "^16.2.0",
+        "vinyl-source-stream": "^2.0.0"
     },
     "devDependencies": {
-        "babel": "^6.3.13",
-        "babel-core": "^6.3.15",
-        "babel-jest": "^6.0.1",
-        "babel-loader": "^6.2.0",
-        "babel-preset-react": "^6.3.13",
-        "babelify": "^7.2.0",
-        "bower": "^1.8.0",
-        "browserify": "^12.0.1",
-        "d3": "^3.5.10",
-        "gulp-nodemon": "^2.0.4",
-        "jest-cli": "^0.8.1",
-        "nodemon": "^1.8.1",
+        "babel": "^6.23.0",
+        "babel-core": "^6.26.0",
+        "babel-jest": "^22.1.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-react": "^6.24.1",
+        "babelify": "^8.0.0",
+        "bower": "^1.8.2",
+        "browserify": "^15.2.0",
+        "d3": "^4.12.2",
+        "gulp-nodemon": "^2.2.1",
+        "jest-cli": "^22.1.4",
+        "nodemon": "^1.14.11",
         "react-tools": "^0.13.3",
-        "webpack": "^1.12.9"
+        "webpack": "^3.10.0"
     }
 }
